# data.paulmcbride.com

./: .env.example  Cargo.toml  Dockerfile  Dockerfile.sync  README.md  railway.mastodon-sync.toml  railway.toml
.github/workflows/: ci.yml
content/notes/: 2022-11-21-155206.md  2022-11-21-190633.md  2022-11-21-191909.md  2022-11-21-201815.md  2022-11-21-230117.md  2022-11-22-130430.md  2022-11-22-170505.md  2022-11-22-175249.md  2022-11-22-182914.md  2022-11-22-192151.md  2022-11-23-180501.md  2022-11-23-181127.md  2022-11-23-195216.md  2022-11-24-091107.md  2022-11-24-121412.md  2022-11-24-193712.md  2022-11-25-092921.md  2022-11-25-175826.md  2022-11-25-185240.md  2022-11-25-200422.md  2022-11-26-185149.md  2022-11-27-160717.md  2022-11-27-162740.md  2022-11-28-161338.md  2022-11-29-230052.md  2022-12-02-184741.md  2022-12-05-163545.md  2022-12-06-160107.md  2022-12-09-123332.md  2022-12-11-192943.md  2022-12-12-162124.md  2022-12-12-193246.md  2022-12-12-210342.md  2022-12-12-210534.md  2022-12-17-234930.md  2022-12-24-092114.md  2022-12-27-181501.md  2022-12-29-095533.md  2022-12-31-114122.md  2023-01-02-222450.md  (+276 more)
content/posts/: 5-reasons-to-learn-react.mdx  async-await.mdx  building-a-second-brain.md  building-a-second-brain.mdx  dev-ops-introduction-aws-lambda.mdx  dont-trust-the-cascade.md  dont-trust-the-cascade.mdx  filter-function-javascript.md  filter-function-javascript.mdx  i-learned-how-to-type.mdx  inaction-is-a-slow-death.mdx  javascript-arrow-functions.mdx  javascript-fetch-api.mdx  javascript-spread-operator.mdx  kagi-search.mdx  make-it-work-make-it-right-make-it-fast.mdx  map-function-javascript.md  map-function-javascript.mdx  module-caching-node.mdx  personal-websites-are-important.mdx  pure-functions.md  pure-functions.mdx  reduce-function-javascript.md  reduce-function-javascript.mdx  rubber-duck-debugging.mdx  saas-tech-stack.mdx  sunsetting-wecode-ni.md  things-i-dont-know-2019.md  things-i-dont-know-2019.mdx  tools-trade-frontend-developer.mdx  use-the-debugger.md  use-the-debugger.mdx  using-node-cluster-module.mdx  var-let-const.mdx  webpack-4.mdx  what-i-want-from-life.mdx  what-is-the-fediverse.mdx  what-programming-language-should-i-learn-first.mdx  writing-is-thinking.mdx
scripts/: sync-mastodon-and-push.sh
src/: config.rs  content.rs  data.rs  health_check.rs  lib.rs  main.rs  mastodon_sync.rs  media_mirror.rs  post_routes.rs  posts.rs  web.rs
src/content/: markdown.rs  note.rs  now.rs  page.rs  post.rs
(+7 files in other folders)
