[package]
name = "content_paulmcbride_com"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.3"
chrono = "0.4.31"
eyre = "0.6.12"
gray_matter = "0.2.6"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
tokio = { version = "1.35.1", features = ["full"] }
tower-http = { version = "0.5.0", features = ["fs", "compression-br"] }

[dev-dependencies]
tower = "0.4.13"
