[package]
name = "content_paulmcbride_com"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = { version = "1.8.18", default-features = false, features = ["default-https-client", "rt-tokio", "credentials-process", "sso"] }
aws-credential-types = "1.2.14"
aws-sdk-s3 = { version = "1.137.0", default-features = false, features = ["default-https-client", "rt-tokio", "sigv4a"] }
axum = "0.7.3"
chrono = "0.4.31"
dotenvy = "0.15.7"
eyre = "0.6.12"
gray_matter = "0.2.6"
mime_guess = "2.0.5"
reqwest = { version = "0.12.22", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
sha2 = "0.10.9"
tokio = { version = "1.52.3", features = ["full"] }
tower-http = { version = "0.5.0", features = ["fs", "compression-br", "trace"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "json"] }

[dev-dependencies]
tower = { version = "0.5.3", features = ["util"] }
